{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "PlayerOne",
            "id": "2a592a12-4368-44bf-bf70-a4aa25b192d2",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "0337a853-db04-4dcc-b97e-fcefda77f21b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "f156b637-3edd-4a0b-94d9-f3bb493faac8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f63f198f-6bf5-4821-9089-e6cf65043637",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "65616b41-5d42-4020-bf38-a25e9a25e0dd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "638c54c3-f0ff-487e-b038-7365ede90b28",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ee2664cb-9167-4210-9753-82f7b0234105",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerTwo",
            "id": "ef1a0975-b94b-44b3-b3bb-b9f897d3bc13",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "053d4300-5de1-4741-96b9-f9c18de0ea87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "300bbb5e-8478-442e-9590-e3443ba51e23",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}